@@ -13,13 +13,42 @@ SYNOPSIS
         {"data":{"some":"data"},"@metadata":"value"}
 
 DESCRIPTION
-    A AnyEvent::STOMP transport for Message::Passing.
+    An STOMP <http://stomp.github.com/> transport for Message::Passing.
 
-    This transport is currently alpha quality. It is known working, however
-    it does not gracefully handle errors or disconnects from the stomp
-    server.
+    STOMP <http://stomp.github.com/> is a simple and well supported
+    messaging protocol, with clients in many languages.
+
+    This is a simple adaptor to allow you to send or receive STOMP messages
+
+QUEUES AND TOPICS
+    STOMP does not specify the semantics for message destinations or
+    subscriptions (other than that they are a string), however most common
+    STOMP servers (including ActiveMQ and RabbitMQ) expect a string matching
+    /queue/name or /topic/name.
+
+    Messages published to a destination prefixed by /queue/ are queued up,
+    until a subscriber connects, at which point they are delivered. If
+    multiple subscribers connect then the messages are distributed between
+    the subscribers (i.e. each subscriber sees a portion of the messages).
+
+    Messages published to a destination prefixed by /topic/ are copied to
+    all connected subscribers, however if there are no subscribers
+    currently, they are discarded, rather than being queued up.
+
+STOMP SERVERS
+    There are a number of message brokers which will communicate with STOMP
+    clients, the main ones being:
+
+  RabbitMQ
+    RabbitMQ <http://www.rabbitmq.com/> has a STOMP plugin
+    <http://www.rabbitmq.com/stomp.html>.
+
+  ActiveMQ
+    ActiveMQ <http://activemq.apache.org/> has a STOMP plugin
+    <http://activemq.apache.org/stomp.html>.
 
 SEE ALSO
+    <http://stomp.github.com/> - STOMP protocol documentation
     Message::Passing::Output::STOMP
     Message::Passing::Input::STOMP
     Message::Passing
