@@ -1,3 +1,5 @@
+  - Better documentation in the Input and Output classes.
+
   - Drop dependencies on JSON modules.
 
   - Link to STOMP protocol documentation
